# calc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
gnuplot/: evolution_gif.gp
gnuplot/flow/: 3d.gp  contours.gp  heatmap.gp  heatmap_t.gp  plots.gp  vectors.gp  xy.gp
libs/: .gitignore
libs/dodulad_ci/: ci.cpp  ci.h  ci.hpp  ci_cuda.h  ci_impl.cu  ci_impl.hpp
python/: density.py  flow.py  incline.py  mach.py  plot.py  pressure.py
src/: .pre-commit-config.yaml  main.cpp
src/base/: ExplicitScheme.cpp  ExplicitScheme.h
src/clife/: Data.cpp  Data.h  Master.cpp  Master.h  Worker.cpp  Worker.h  main.cpp
src/flow/: DoduladCI.cpp  DoduladCI.cu  DoduladCI.h  Evolution2D.cpp  Evolution2D.cu  Evolution2D.h  Evolution3D.cu  Evolution3D.h  Grid2D.cpp  Grid2D.cu  Grid2D.h  Grid3D.cu  Grid3D.h  IndexMap.cpp  IndexMap.h  IndexTankFull2D.cpp  IndexTankFull2D.h  IndexTankWithScreen2D.cpp  IndexTankWithScreen2D.cu  IndexTankWithScreen2D.h  RoundHoleTank.cu  RoundHoleTank.cuh  State2D.cpp  State2D.cu  State2D.h  State3D.cu  State3D.h  Storage2D.cpp  Storage2D.cu  Storage2D.h  Storage2D.hpp  Tank2D.cpp  Tank2D.h  TankWithScreen2D.cpp  TankWithScreen2D.h  VagapovaCI.cpp  VagapovaCI.h  main.cpp  main.cu  main2.cpp  (+3 more)
src/flow/interfaces/: CollisionIntegral.h  Evolution.cpp  Evolution.h  Geometry.h  Grid.h  Space.h  State.cpp  State.h  Storage.h  base.h  base2D.h  base3D.cu  base3D.h
src/flow/tanks/: PartialCellTank.cu  PartialCellTank.cuh
src/flow/utils/: cuda.h
src/life/: DistributedLifeData.cpp  DistributedLifeData.h  LifeData.cpp  LifeData.h  main.cpp
src/schemes/: ExplicitScheme.cpp  ExplicitScheme.h  LaxWendroffScheme.cpp  LaxWendroffScheme.h  SimpleScheme.cpp  SimpleScheme.h  main.cpp
src/thermos/: Data.cpp  Data.h  main.cpp
